# tree-sitter-emden

./: Cargo.toml  binding.gyp  grammar.js  package-lock.json  package.json  parser.exp  parser.lib  test.emden
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
