[package]
name = "tree-sitter-emden"
description = "emden grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "emden"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-emden"
edition = "2018"
license = "MIT"
authors = ["Hayden Brown <scratchcat458@gmail.com>"]

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
